[FIX] PIctures overflow

--- a/src/components/module/layout.module.less
+++ b/src/components/module/layout.module.less
@@ -71,10 +71,6 @@
       margin-top: 0;
       max-width: 335px;
       height: 677px;
-
-   /*   max-width: 334px;
-      margin-bottom: 0;
-      margin-left: 42px;*/
     });
   }
   .min-medium({padding-top: 120px; .mainLayout('row')});
